--- a/src/main/resources/lang/uk.yml
+++ b/src/main/resources/lang/uk.yml
@@ -95,3 +95,45 @@ command.gift.help.commands:
   - "<yellow>/gift help <white>- Показати це повідомлення допомоги"
 
 command.gift.help.footer: "<gold>⋆｡˚ ☁︎ ˚｡⋆｡˚☽˚｡⋆⋆｡˚ ☁︎ ˚｡⋆｡˚☽˚｡⋆"
+
+# Gift status keys
+gift.status.pending: "<yellow>Статус: <white>Очікує доставки"
+gift.status.delivered: "<green>Статус: <white>Доставлено"
+gift.status.opened: "<light_purple>Статус: <white>Відкрито"
+
+# Gift history GUI
+gui.history.title: "<gold>Історія Подарунків"
+gui.history.tab.received.active: "<light_purple>Отримані Подарунки <gray>(активно)"
+gui.history.tab.received.inactive: "<gray>Отримані Подарунки"
+gui.history.tab.sent.active: "<light_purple>Надіслані Подарунки <gray>(активно)"
+gui.history.tab.sent.inactive: "<gray>Надіслані Подарунки"
+gui.history.gift.name: "<gold>{0}"
+gui.history.gift.from: "<yellow>Від: <white>{0}"
+gui.history.gift.to: "<yellow>Кому: <white>{0}"
+gui.history.gift.created: "<yellow>Створено: <white>{0}"
+gui.history.gift.delivered: "<yellow>Доставлено: <white>{0}"
+gui.history.gift.opened: "<yellow>Відкрито: <white>{0}"
+gui.history.gift.message: "<yellow>Повідомлення: <white>{0}"
+gui.history.gift.view_details: "<gray>Натисніть для перегляду деталей"
+gui.history.empty.sent: "<red>Ви ще не надсилали подарунків!"
+gui.history.empty.received: "<red>Ви ще не отримували подарунків!"
+gui.history.back: "<red>Повернутися до головного меню"
+gui.history.prev_page: "<yellow>Попередня сторінка"
+gui.history.next_page: "<yellow>Наступна сторінка"
+gui.history.page_indicator: "<gold>Сторінка {0} з {1}"
+gui.history.details.title: "<gold>Деталі Подарунка: {0}"
+gui.history.details.info.name: "<gold>{0}"
+gui.history.details.info.sender: "<yellow>Від: <white>{0}"
+gui.history.details.info.recipient: "<yellow>Кому: <white>{0}"
+gui.history.details.info.created: "<yellow>Створено: <white>{0}"
+gui.history.details.info.delivered: "<yellow>Доставлено: <white>{0}"
+gui.history.details.info.opened: "<yellow>Відкрито: <white>{0}"
+gui.history.details.info.message_header: "<yellow>Повідомлення:"
+gui.history.details.sender: "<yellow>Відправник: <white>{0}"
+gui.history.details.recipient: "<yellow>Отримувач: <white>{0}"
+gui.history.details.items: "<yellow>Вміст Подарунка"
+gui.history.details.back: "<red>Повернутися до історії подарунків"
+
+message.gift_not_found: "<red>Цей подарунок не знайдено!"
+
+command.gift.reload: "<light_purple>✿ <green>Конфігурацію та мови плагіна перезавантажено! <light_purple>✿"
